--- a/style.css
+++ b/style.css
@@ -60,18 +60,27 @@ a {
 
 /*  HEADER  */
 
+#header {
+    position: sticky;
+    top: 0px;
+    left: 0px;
+    overflow: hidden;
+    z-index: 900;
+}
+
 #navbar {
     display: flex;
     overflow: hidden;
     background-color: #333;
     position: fixed;
     top: 0;
+    left: 0;
     width: 100vw;
     height: calc(10vh - 1px); /* -1px because of the bottom border which is 1px */
     background: #002020;
     background: radial-gradient(circle farthest-corner at right center, #002020 0%, #006E6E 100%);
     border-bottom: 1px solid rgb(0, 186, 186);
-    z-index: 10;
+    z-index: 999;
     justify-content: space-between;
     align-items: center;
 }
@@ -245,15 +254,19 @@ h1 {
    /* background: linear-gradient(to top, #002020 10%, #006E6E 75%); */
 }
 
+.project2 {
+    border: 1px solid transparent;
+    height: 44vh;
+    width: 98%;
+    background-color: #006e6e;
+   /* background: linear-gradient(to top, #002020 10%, #006E6E 75%); */
+}
+
 .projectTitle {
     height: 10vh;
     background-color: #006e6e;
     position: relative;
     width: 100%;
-}
-
-#projectsOnlyDiv {
-    border: 1px solid red;
 }
 
 .gradientBorderDiv {
@@ -266,6 +279,42 @@ h1 {
     background: linear-gradient(to top, #002020 10%, #006E6E 75%);
     margin: 5vh 0;
 }
+
+.gradientBorderDiv2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 45vh;
+    width: 100%;
+    background: #002020;
+    background: linear-gradient(to top, #002020 10%, #006E6E 75%);
+    margin: 5vh 0;
+
+}
+
+#gradientId1 {
+    position: absolute;
+    top: 458.9%;
+    left: -81vw;
+    width: 90%;
+    transform: scale(0.85);
+}
+
+#gradientId2 {
+    position: absolute;
+    top: 458.9%;
+    left: 5vw;
+    width: 90%;
+}
+
+#gradientId3 {
+    position: absolute;
+    top: 458.9%;
+    right: -81vw;
+    width: 90%;
+    transform: scale(0.85);
+}
+
 
 .projectBgImg {
     background-repeat: no-repeat;
@@ -348,4 +397,64 @@ h1 {
     border: none;
     text-transform: uppercase;
     font-weight: 400;
+}
+
+#projectControls {
+    font-size: 3rem;
+    color: #dedede;
+}
+
+#leftProjectArr {
+    margin-right: 2.5vw;
+}
+
+#rightProjectArr {
+    margin-left: 2.5vw;
+}
+
+#contactSec {
+    margin-top: 10vh;
+}
+
+label {
+    color: #002020;
+}
+input, textarea {
+    background-color: rgb(0, 43, 43);
+    border: 1px solid rgb(0, 186, 186);
+    width: 100%;
+    text-align: left;
+    color: #dedede;
+}
+
+input {
+    height: 7vh;
+    padding: 0 2rem;
+
+}
+
+textarea {
+    padding: 1rem 2rem;
+}
+
+*::placeholder {
+    color: #dedede;
+}
+
+#submit {
+    background-color: rgb(0, 186, 186);
+    margin-top: 3vh;
+    text-align: center;
+    font-size: 1.5rem;
+    letter-spacing: 2px;
+    font-weight: 300;
+}
+
+#waves2 {
+    width: 100%;
+}
+
+#fastContactSec {
+    background: #002020;
+    background: linear-gradient(to top, #002020 10%, #006E6E 40%);
 }
