--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: "Source Sans Pro"; /*  INSERT FALLBACK FONTS HERE !!!*/
+    font-family: "Source Sans Pro", Arial, sans-serif; 
     text-align: center;
     box-sizing: border-box;
 }
